<resources>
    <string name="app_name">AndroidApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_series">Add new series</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="number_of_seasons">Number of seasons</string>
    <string name="number_of_episodes_per_seasons">Number of episodes per seasons</string>
    <string name="cat_fact">Cat Fact</string>
    <string name="watch_list">Watch List</string>
    <string name="seasons">Seasons:</string>
    <string name="episode_season">Episodes/Seasons:</string>
    <string name="loading">Loading...</string>
    <string name="next_episode">Next episode:</string>
    <string name="delete">Delete</string>
    <string name="finished">Finished</string>
</resources>